# ml_runtime_evaluation

./: .gitignore  LICENSE  README.md  requirements.txt
cpp/: main.cpp
cpp/nn_runners/: RunnerInterface.hpp  TfLiteRunner.hpp
data/: LICENSE
doc/: 2022-12-04-rohow.md
models/: mnist_model.tflite
models/converters/: torchscript_optimize.py
models/hulks_2022/: 01_patch_classifier.py  02_backbone_autoencoder.py  README.md  autoencoder.hdf5  classifier.onnx  classifier.tflite  classifier_backbone.hdf5  classifier_multiclass.hdf5  classifier_updated.hdf5  positioner.tflite  script_02_backbone_autoencoder.py
models/hulks_2022/classifier_saved_model/: saved_model.pb
models/hulks_2022/classifier_saved_model/variables/: variables.data-00000-of-00001  variables.index
models/yolo/: LICENSE  yolov8n.torchscript
rust/: Cargo.toml
rust/benches/: benchmark.rs
rust/src/: lib.rs  main.rs
rust/src/nn_runners/: compiled_nn_runner.rs  mod.rs  onnx_runtime_runner.rs  runner_traits.rs  tflite_c.rs  tflite_runner.rs  torch_runner.rs  tract_onnx_runner.rs
