[package]
edition = "2021"
name = "nn_backend_test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
cfg-if = "1.0.0"
image = "0.24.1"
itertools = "0.10.5"

# Tract
tract-core = "^0.19.0"
tract-onnx = "^0.19.0"
# tract = "0.16.7"
tract-tensorflow = "^0.19.0"

#compiledNN
compiled-nn = "0.10.0"

#ONNX Runtime
# mcai-onnxruntime = "0.0.15"

# Apache TVM
# tvm-rt = { git = "https://github.com/apache/tvm/", branch="main"}
# tvm-sys = { git = "https://github.com/apache/tvm/", branch="main"}

# Tensorflow Lite
tflitec = {version = "^0.5.2", optional = true, features = ["xnnpack"]}

[dev-dependencies]
criterion = "0.4"
# plotters = "0.3.3"
pprof = {version = "0.11", features = ["flamegraph", "criterion"]}

[features]
default = []
nao = []
tflite = ["dep:tflitec"]

[[bench]]
harness = false
name = "benchmark"
